spring-boot.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-app-deployment
  labels:
    app: spring-boot-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot-app
  template:
    metadata:
      labels:
        app: spring-boot-app
    spec:
      containers:
        - name: spring-boot-app
          image: spring-web:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health  #  Spring Boot Actuator
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookie"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "JSESSIONID1234"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "300"
spec:
  type: LoadBalancer
  selector:
    app: spring-boot-app
  ports:
    - port: 80
      targetPort: 8080
